--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +16,6 @@
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "hbs": "^4.2.0",
-    "mysql": "^2.18.1",
-    "nodemon": "^3.0.3"
+    "mysql": "^2.18.1"
   }
 }
